--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#161616</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lightGray">#b8b8b8</color>
 </resources>
