--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,5 @@
     <dimen name="bottomMargin">20dp</dimen>
     <dimen name="screenMargin">15dp</dimen>
     <dimen name="topPadding">10dp</dimen>
-    <dimen name="editTextPadding">10dp</dimen>
+    <dimen name="textSize">18sp</dimen>
 </resources>
