--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,15 +9,13 @@
 
     <EditText
         android:id="@+id/textEmailAddress"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/editTextSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="128dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:textColorHint="@color/lightGray"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,50 +23,30 @@
 
     <EditText
         android:id="@+id/textPassword"
+        style="@style/editTextSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="68dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        android:textColorHint="@color/lightGray"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
-<<<<<<< HEAD
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textEmailAddress"
         app:layout_constraintVertical_bias="0.209" />
-=======
-<<<<<<< Updated upstream
-        app:layout_constraintStart_toStartOf="parent" />
-=======
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textEmailAddress"
-        app:layout_constraintVertical_bias="1.0" />
->>>>>>> Stashed changes
->>>>>>> main
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-<<<<<<< HEAD
         android:layout_marginBottom="36dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="Login"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-=======
-<<<<<<< Updated upstream
-=======
-        android:layout_marginBottom="72dp"
-        android:fontFamily="@font/roboto_bold"
->>>>>>> Stashed changes
-        android:text="Login"
         android:onClick="signIn"
+        android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
->>>>>>> main
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
