--- a/app/src/main/res/layout/activity_add_tasks.xml
+++ b/app/src/main/res/layout/activity_add_tasks.xml
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="Add Task"
+        android:onClick="addTask"
         app:layout_constraintBottom_toTopOf="@+id/backButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
