Added User Icon and set up sign up page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
+    android:clickable="true"
+    android:onClick="signIn"
     android:padding="40dp"
     tools:context=".MainActivity">
 
@@ -13,7 +15,7 @@
         style="@style/editTextSettings"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/custom_email_icon"
         android:drawablePadding="12dp"
@@ -33,14 +35,14 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="24dp"
-        android:ems="10"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/custom_lock_icon"
         android:drawablePadding="12dp"
+        android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="Don't have an account? Sign Up"
+        android:text="@string/dont_have_account"
         android:textColor="@color/lightGray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
