--- a/app/src/main/res/layout/activity_display_tasks.xml
+++ b/app/src/main/res/layout/activity_display_tasks.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:id="@+id/eventList"
+        android:id="@+id/taskList"
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_marginTop="20dp"
