--- a/app/src/main/res/layout/activity_display_tasks.xml
+++ b/app/src/main/res/layout/activity_display_tasks.xml
@@ -24,9 +24,7 @@
         android:layout_height="400dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/taskTitleText"
-        tools:layout_editor_absoluteX="0dp">
-
-    </ListView>
+        tools:layout_editor_absoluteX="0dp"></ListView>
 
     <Button
         android:id="@+id/addTaskButton"
