--- a/app/src/main/res/layout/activity_task_parcelable.xml
+++ b/app/src/main/res/layout/activity_task_parcelable.xml
@@ -7,14 +7,37 @@
     tools:context=".TaskParcelable">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="161dp"
+        android:id="@+id/taskName"
+        android:layout_width="207dp"
         android:layout_height="39dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="44dp"
         android:text="TextView"
-        android:textSize="30dp"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/completeTaskButton"
+        android:layout_width="93dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="36dp"
+        android:text="Complete!"
+        android:textSize="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/removeTaskButton"
+        android:layout_width="53dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:text="X"
+        android:textSize="15dp"
+        app:layout_constraintStart_toEndOf="@+id/taskName"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
