--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:text="Email"
         android:inputType="textEmailAddress"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
@@ -28,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:ems="10"
+        android:text="Password"
         android:inputType="textPassword"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
