--- a/app/src/main/res/layout/activity_task_parcelable.xml
+++ b/app/src/main/res/layout/activity_task_parcelable.xml
@@ -35,6 +35,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
         android:text="X"
+        android:onClick="removeTask"
         android:textSize="15dp"
         app:layout_constraintStart_toEndOf="@+id/taskName"
         app:layout_constraintTop_toTopOf="parent" />
