--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textEmailAddress" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -74,12 +74,13 @@
         app:srcCompat="@mipmap/taskmaster_transparent_foreground" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/signUpTextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="@string/dont_have_account"
         android:textColor="@color/lightGray"
+        android:onClick="toSignUp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
