--- a/app/src/main/res/layout/activity_task_parcelable.xml
+++ b/app/src/main/res/layout/activity_task_parcelable.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="116dp"
         android:layout_marginTop="44dp"
         android:text="TextView"
+        android:textColor="@color/white"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
