--- a/app/src/main/res/layout/activity_display_tasks.xml
+++ b/app/src/main/res/layout/activity_display_tasks.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    android:textAlignment="center"
     android:padding="40dp"
+    android:textAlignment="center"
     tools:context=".DisplayTasksActivity">
 
     <TextView
@@ -25,12 +25,13 @@
 
     <ListView
         android:id="@+id/taskList"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="407dp"
+        android:layout_height="434dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskTitleText"></ListView>
+        app:layout_constraintTop_toBottomOf="@+id/taskTitleText"
+        app:layout_constraintVertical_bias="0.28"></ListView>
 
     <Button
         android:id="@+id/addTaskButton"
@@ -39,7 +40,7 @@
         android:layout_marginBottom="4dp"
         android:fontFamily="@font/roboto_bold"
         android:onClick="addTask"
-        android:text="Login"
+        android:text="Add Task"
         app:backgroundTint="@color/purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
